--- a/stockmarket/package.json
+++ b/stockmarket/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request-promise-native": "1.0.5",
+    "request":"2.87.0"
   }
 }
