--- a/stockmarket/package.json
+++ b/stockmarket/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "request-promise-native": "1.0.5",
-    "request":"2.87.0"
+    "request":"2.87.0",
+    "csv":"3.1.0"
   }
 }
