--- a/stockmarket/package.json
+++ b/stockmarket/package.json
@@ -13,7 +13,16 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "request-promise-native": "1.0.5",
-    "request":"2.87.0",
-    "csv":"3.1.0"
+    "request": "2.87.0",
+    "csv": "3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
